force-app/main/default/objects/User/fields/LineId__c.field-meta.xml
<CustomField>
    <fullName>LineId__c</fullName>
    <label>LINE ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>