force-app/main/default/objects/User/fields/LineProfileImageUrl__c.field-meta.xml
<CustomField>
    <fullName>LineProfileImageUrl__c</fullName>
    <label>LINE Profile Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>