force-app/main/default/objects/User/fields/LineUserName__c.field-meta.xml
<CustomField>
    <fullName>LineUserName__c</fullName>
    <label>LINE UserName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>